fix index.html for github pages, rename main to base

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css" media="screen and (max-width: 768px)">
+    <link rel="stylesheet" href="res/css/style.css">
+    <link rel="stylesheet" href="res/css/mobile.css" media="screen and (max-width: 768px)">
     <title>Kodama</title>
     <link rel="icon" type="image/png" href="res/favicon.ico">
 </head>
@@ -40,11 +40,11 @@
                 K<span class="blue-letter">O</span>D<span class="purple-letter">A</span><span
                     class="blue-letter">M</span>A
             </h1>
-            <img id="main-btn" src="res/start_red_btn.png">
+            <img id="main-btn" src="res/icon/start_red_btn.png">
 
             <div id="select-course">
                 <a href="#courses-section" id="select-course-btn-link">
-                    <img id="select-course-btn" src="res/select_course_btn.png">
+                    <img id="select-course-btn" src="res/icon/select_course_btn.png">
                 </a>
             </div>
         </div>
@@ -58,19 +58,19 @@
         </a>
         <nav id="nav-mobile-menu">
             <a class="mobile-menu-item" href="#about-section">
-                <img class="mobile-menu-icon" src="res/about_icon.png">
+                <img class="mobile-menu-icon" src="res/icon/about_icon.png">
                 О школе
             </a>
             <a class="mobile-menu-item" href="#courses-section">
-                <img class="mobile-menu-icon" src="res/courses_icon.png">
+                <img class="mobile-menu-icon" src="res/icon/courses_icon.png">
                 Курсы
             </a>
             <a class="mobile-menu-item" href="#questions-section">
-                <img class="mobile-menu-icon" src="res/feedbacks_icon.png">
+                <img class="mobile-menu-icon" src="res/icon/feedbacks_icon.png">
                 Вопросы
             </a>
             <a class="mobile-menu-item" href="#submit-app-section">
-                <img class="mobile-menu-icon" src="res/contacts_icon.png">
+                <img class="mobile-menu-icon" src="res/icon/contacts_icon.png">
                 Контакты
             </a>
         </nav>
@@ -97,7 +97,7 @@
                 </p>
             </div>
             <div class="right">
-                <img src="res/right_image_about.png">
+                <img src="res/icon/right_image_about.png">
             </div>
         </div>
         <div class="bottom-decor-about"></div>
@@ -118,28 +118,28 @@
             <div class="cloud" id="cloud-left-bottom"></div>
             <div class="courses-container">
                 <div class="course-card">
-                    <img src="res/figma_logo.png" alt="Figma">
+                    <img src="res/icon/figma_logo.png" alt="Figma">
                     <div class="course-card-text">
                         <h3>Графический дизайн</h3>
                         <p>в редакторе Figma</p>
                     </div>
                 </div>
                 <div class="course-card">
-                    <img src="res/scratch_logo.png" alt="Scratch">
+                    <img src="res/icon/scratch_logo.png" alt="Scratch">
                     <div class="course-card-text">
                         <h3>Создание 2D игр</h3>
                         <p>на языке Scratch</p>
                     </div>
                 </div>
                 <div class="course-card">
-                    <img src="res/comp_lit_logo.png" alt="Computer Literacy">
+                    <img src="res/icon/comp_lit_logo.png" alt="Computer Literacy">
                     <div class="course-card-text">
                         <h3>Компьютерная</h3>
                         <p>грамотность</p>
                     </div>
                 </div>
                 <div class="course-card">
-                    <img src="res/roblox_logo.png" alt="Roblox">
+                    <img src="res/icon/roblox_logo.png" alt="Roblox">
                     <div class="course-card-text">
                         <h3>Создание 3D игр</h3>
                         <p>в Roblox</p>
@@ -304,7 +304,7 @@
 
     <section id="submit-app-section">
         <div id="submit-app-content">
-            <img id="submit-app-photo" src="res/request_photo.jpg">
+            <img id="submit-app-photo" src="res/icon/request_photo.jpg">
             <div id="submit-app-form">
                 <h3>Запишитесь на первый урок</h3>
                 <select id="course-select">
