fix favicon index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="res/css/style.css">
     <link rel="stylesheet" href="res/css/mobile.css" media="screen and (max-width: 768px)">
     <title>Kodama</title>
-    <link rel="icon" type="image/png" href="res/favicon.ico">
+    <link rel="icon" type="image/png" href="res/icon/favicon.ico">
 </head>
 
 <body id="top-site">
