add students and video

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
         <div id="guide-school-content">
             <h3>Путеводитель по нашей школе</h3>
-            <iframe id="guide-school-video" src="https://www.youtube.com/embed/eg_rlPU5nU0?si=LIow4rn37jrKlWfj"
+            <iframe id="guide-school-video" src="https://www.youtube.com/embed/WgmAIMIO2r8?si=oaWYGF0y240DHI-E"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
