add photo to every course select in submit app section, change colors

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         </div>
     </section>
 
+    <!--
     <section id="students-section">
         <h3>Лучшие студенты школы</h3>
         <div id="students-container">
@@ -184,6 +185,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <!--
     <section id="guide-school-section">
@@ -324,9 +326,9 @@
 
     <section id="submit-app-section">
         <div id="submit-app-content">
-            <img id="submit-app-photo" src="res/icon/request_photo.jpg">
+            <img id="submit-app-photo" src="res/icon/figma_submit.png">
             <div id="submit-app-block">
-                <h3>Запишитесь на первый урок</h3>
+                <h3 id="submit-app-title">Запишитесь на первый урок</h3>
                 <form id="submit-app-form">
                     <select id="course-select">
                         <option value="" selected disabled hidden>Выберите курс</option>
@@ -341,7 +343,6 @@
                     <input type="text" name="fields[PHONE][0][VALUE_TYPE]" value="WORK" hidden>
                     <input type="email" id="email" name="fields[EMAIL][0][VALUE]" placeholder="Ваша почта" required>
                     <input type="text" name="fields[EMAIL][0][VALUE_TYPE]" value="WORK" hidden>
-
                     <button class="submit-app-form__btn" id="submit-btn" type="submit">Отправить</button>
                 </form>
             </div>
