--- a/index.html
+++ b/index.html
@@ -116,28 +116,28 @@
             <div class="cloud" id="cloud-middle"></div>
             <div class="cloud" id="cloud-left-bottom"></div>
             <div class="courses-container">
-                <div class="course-card" onclick="openFigmaModal()">
+                <div class="course-card" onclick="openCourseModal('figma')">
                     <img src="res/icon/figma_logo.png" alt="Figma">
                     <div class="course-card-text">
                         <h3>Графический дизайн</h3>
                         <p>в редакторе Figma</p>
                     </div>
                 </div>
-                <div class="course-card">
+                <div class="course-card" onclick="openCourseModal('scratch')">
                     <img src="res/icon/scratch_logo.png" alt="Scratch">
                     <div class="course-card-text">
                         <h3>Создание 2D игр</h3>
                         <p>на языке Scratch</p>
                     </div>
                 </div>
-                <div class="course-card">
+                <div class="course-card" onclick="openCourseModal('computer-literacy')">
                     <img src="res/icon/comp_lit_logo.png" alt="Computer Literacy">
                     <div class="course-card-text">
                         <h3>Компьютерная</h3>
                         <p>грамотность</p>
                     </div>
                 </div>
-                <div class="course-card">
+                <div class="course-card" onclick="openCourseModal('roblox')">
                     <img src="res/icon/roblox_logo.png" alt="Roblox">
                     <div class="course-card-text">
                         <h3>Создание 3D игр</h3>
@@ -145,23 +145,43 @@
                     </div>
                 </div>
 
-                <div id="figma-modal" class="modal">
+                <div id="course-modal" class="modal">
                     <div class="modal-content">
                         <span class="close">&times;</span>
-                        <div class="title-container">
-                            <h2>Название курса</h2>
+
+                        <div class="modal-header">
+                            <div class="modal-title-container">
+                                <h2 id="course-modal-title">Название курса</h2>
+                                <h3 id="course-modal-subtitle">Подзаголовок курса</h3>
+                            </div>
+                            <img id="course-modal-icon" src="res/icon/icon.png" alt="Иконка курса">
+                            <p id="course-modal-description">Описание курса.</p>
                         </div>
 
-                        <p>Описание курса</p>
-                        <div class="images-container">
-                            <img src="res/icon/request_photo.jpg" alt="Скриншот курса">
-                            <img src="res/icon/request_photo.jpg" alt="Скриншот курса">
+                        <div class="modal-body">
+                            <div class="images-container">
+                                <div class="course-image">
+                                    <img src="res/icon/student3.jpg" alt="Скриншот курса" class="course-image">
+                                </div>
+                                <div class="course-image">
+                                    <img src="res/icon/student3.jpg" alt="Скриншот курса" class="course-image">
+                                </div>
+                            </div>
+
+                            <div class="course-details">
+                                <p>• Допустимый возраст ребенка: 10-12 лет</p>
+                                <p>• Кому идеально подойдет: детям, интересующимся графическим дизайном</p>
+                                <p>• Длительность курса: 6 месяцев</p>
+                            </div>
                         </div>
-                        <p>Допустимый возраст ребенка: 10-12 лет</p>
-                        <p>Кому идеально подойдет: детям, интересующимся графическим дизайном</p>
-                        <button class="apply-button">Записаться</button>
+
+                        <div class="modal-footer">
+                            <button class="apply-button">Записаться</button>
+                        </div>
                     </div>
                 </div>
+
+
 
             </div>
         </div>
@@ -337,9 +357,11 @@
                         <option value="roblox">Roblox</option>
                         <option value="dont_know">Не могу определиться</option>
                     </select>
-                    <input id="lead-title" type="text" name="fields[TITLE]" placeholder="Заголовок лида" value="Заявка с сайта" hidden>
+                    <input id="lead-title" type="text" name="fields[TITLE]" placeholder="Заголовок лида"
+                        value="Заявка с сайта" hidden>
                     <input type="text" name="fields[NAME]" id="name" placeholder="Ваше имя" required>
-                    <input type="tel" id="phone" name="fields[PHONE][0][VALUE]" placeholder="Ваш телефон" required pattern="[0-9]{10,15}" title="Введите номер телефона (только цифры, 10-15 символов)">
+                    <input type="tel" id="phone" name="fields[PHONE][0][VALUE]" placeholder="Ваш телефон" required
+                        pattern="[0-9]{10,15}" title="Введите номер телефона (только цифры, 10-15 символов)">
                     <input type="text" name="fields[PHONE][0][VALUE_TYPE]" value="WORK" hidden>
                     <input type="email" id="email" name="fields[EMAIL][0][VALUE]" placeholder="Ваша почта" required>
                     <input type="text" name="fields[EMAIL][0][VALUE_TYPE]" value="WORK" hidden>
