modal window for courses section

--- a/index.html
+++ b/index.html
@@ -161,28 +161,26 @@
                         <div class="modal-body">
                             <div class="images-container">
                                 <div class="course-image">
-                                    <img src="res/icon/student3.jpg" alt="Скриншот курса" class="course-image">
+                                    <img src="res/icon/student3.jpg" alt="Скриншот курса" class="course-image" id="course-image1">
                                 </div>
                                 <div class="course-image">
-                                    <img src="res/icon/student3.jpg" alt="Скриншот курса" class="course-image">
+                                    <img src="res/icon/student3.jpg" alt="Скриншот курса" class="course-image" id="course-image2">
                                 </div>
                             </div>
-
                             <div class="course-details">
-                                <p>• Допустимый возраст ребенка: 10-12 лет</p>
-                                <p>• Кому идеально подойдет: детям, интересующимся графическим дизайном</p>
-                                <p>• Длительность курса: 6 месяцев</p>
+                                <ul>
+                                    <li id="course-fact1">• Допустимый возраст ребенка: 10-12 лет</li>
+                                    <li id="course-fact2">• Кому идеально подойдет: детям, интересующимся графическим
+                                        дизайном</li>
+                                    <li id="course-fact3">• Длительность курса: 6 месяцев</li>
+                                </ul>
                             </div>
                         </div>
-
                         <div class="modal-footer">
                             <button class="apply-button">Записаться</button>
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
         </div>
     </section>
