--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
                 <h2>Добро пожаловать в мир школы программирования Kodama</h2>
                 <p>
                     Добро пожаловать в Kodama - онлайн-школу программирования, где мы создаем будущее вместе! Мы
-                    предлагаем вам уникальную возможность погрузиться в увлекательный мир кодирования и создания
-                    программ. Наши курсы разработаны для того, чтобы помочь вам освоить различные языки
-                    программирования, научиться создавать веб-сайты, игры и многое другое.
+                    предлагаем вам уникальную возможность погрузиться в увлекательный мир программирования и создания
+                    чего-то уникального. Наши курсы разработаны для того, чтобы помочь вам освоить различные языки
+                    программирования, научиться создавать веб-сайты, игры, дизайн и многое другое.
 
-                    У нас вы найдете опытных преподавателей, готовых поддержать вас на каждом шагу вашего обучения.
+                    У нас вы найдете опытных преподавателей, готовых поддержать вас на каждом шагу обучения.
                     Мы предлагаем гибкий график занятий, чтобы вы могли учиться в удобное для вас время, а также
                     возможность работать над реальными проектами, что поможет вам применить полученные навыки на
                     практике.
 
-                    Присоединяйтесь к нашему сообществу и станьте частью новой волны программистов, готовых изменить
-                    мир с помощью технологий!
+                    Присоединяйтесь к нашему сообществу и станьте частью новой волны создателей, готовых изменить мир с
+                    помощью технологий!
                 </p>
             </div>
             <div class="right">
@@ -161,10 +161,12 @@
                         <div class="modal-body">
                             <div class="images-container">
                                 <div class="course-image">
-                                    <img src="res/icon/student3.jpg" alt="Скриншот курса" class="course-image" id="course-image1">
+                                    <img src="res/icon/student3.jpg" alt="Скриншот курса" class="course-image"
+                                        id="course-image1">
                                 </div>
                                 <div class="course-image">
-                                    <img src="res/icon/student3.jpg" alt="Скриншот курса" class="course-image" id="course-image2">
+                                    <img src="res/icon/student3.jpg" alt="Скриншот курса" class="course-image"
+                                        id="course-image2">
                                 </div>
                             </div>
                             <div class="course-details">
@@ -250,44 +252,41 @@
             <h2>Вопросы, которые могут возникнуть у вас</h2>
             <div id="fabs">
                 <div class="faq-left">
-                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer1')">Продолжительность курсов</div>
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer1')">
+                        Нужно ли ученику куда-то идти для обучения?
+                    </div>
                     <div class="faq faq-answer" id="faq-answer1">
-                        У нас каждый студент может выбирать удобное для себя количество занятий в неделю: 1, 2 или 3
-                        раза. Мы учитываем вашу индивидуальную загруженность и желания.
-
-                        Наши курсы разделены на программы разной продолжительности:
-
-                        Для начинающих в создании 2D игр в Scratch: от 6 месяцев до 1 года.
-                        Программа по графическому дизайну: от 1 года до 2 лет.
-                        Программа по компьютерной грамотности: от 6 месяцев до 1 года.
-                        Мы гарантируем, что ваше обучение будет не только эффективным, но и увлекательным!
+                        Нет, для обучения не требуется выходить из дома. Все занятия проходят в онлайн-формате, и ученик
+                        может участвовать в них прямо из дома, используя свой компьютер.
                     </div>
 
-                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer2')">Стоимость занятий</div>
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer2')">
+                        Каким образом проходит обучение?
+                    </div>
                     <div class="faq faq-answer" id="faq-answer2">
-                        В нашей школе представлены три варианта оплаты:
-                        "Приключение" – 10 уроков за 12000 рублей, средняя стоимость урока 1200 рублей. Кроме того, при
-                        покупке этого абонемента вы получаете бонусные баллы в размере 1000 рублей.
-                        "Компас" – 22 урока за 24200 рублей, средняя стоимость урока около 1100 рублей. В рамках этого
-                        абонемента вы получаете бонусные баллы в размере 1500 рублей.
-                        "Творческий мастер" – 45 уроков за 45000 рублей, средняя стоимость урока около 1000 рублей. При
-                        покупке этого абонемента вы получаете бонусные баллы в размере 2000 рублей.
-                        Выбрав один из наших абонементов, вы получите возможность обучиться программированию по выгодной
-                        цене и в удобном формате, а также сможете воспользоваться бонусами для дополнительных уроков или
-                        материалов.
+                        Каждый урок проходит в режиме реального времени с участием вашего преподавателя. Преподаватель
+                        будет активно взаимодействовать с учеником, помогая ему на протяжении всего занятия. Для этого
+                        используется программа, которая позволяет преподавателю видеть экран ученика, чтобы лучше
+                        понимать его текущие действия. Это обеспечивает персонализированный подход к обучению и
+                        позволяет преподавателю направлять ученика, отвечать на вопросы и помогать в процессе работы.
                     </div>
 
-                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer3')">Какие возрастные категории вы
-                        обучаете?
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer3')">
+                        Обучение индивидуальное или групповое?
                     </div>
                     <div class="faq faq-answer" id="faq-answer3">
-                        Мы предлагаем обучение программированию для детей и подростков возрастом от 7 до 18 лет. Наши
-                        курсы разработаны с учетом возрастных особенностей учеников:
+                        Обучение проводится индивидуально. Мы подберем преподавателя, который лучше всего подойдет
+                        вашему ребенку.
+                    </div>
 
-                        Создание 2D игр в Scratch : Принимаем детей от 7 лет и старше.
-                        Графический дизайн: Рекомендовано для детей от 10 лет и старше.
-                        Roblox : Подходит для детей от 9 лет и старше.
-                        Компьютерная грамотность: Подходит для детей от 8 лет и старше.
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer8')">
+                        Какова стоимость занятий?
+                    </div>
+
+                    <div class="faq faq-answer" id="faq-answer8">
+                        Стоимость одного занятия составляет 1000 рублей. Вы можете приобрести пакет из 5, 10, 15 и более
+                        уроков. Уроки списываются с вашего баланса только по факту их проведения, что позволяет гибко
+                        планировать обучение и оплачивать только за реально проведенные занятия.
                     </div>
                 </div>
 
@@ -296,41 +295,34 @@
                     </div>
 
                     <div class="faq faq-answer" id="faq-answer4">
-                        Ваш ребенок приобретет навыки программирования, создания игр, работу с компьютерными
-                        программами, а также улучшит логическое мышление, творческий потенциал и умение работать в
-                        команде
+                        Все зависит от выбранного курса. Ваш ребенок может научиться основам программирования, развить
+                        логическое и креативное мышление, освоить графический дизайн, работу с текстовыми редакторами и
+                        презентациями, безопасное поведение в интернете, а также приобретет навыки работы в 3D-редакторе
+                        и создания собственных игр.
                     </div>
 
-                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer5')">Какие дополнительные мероприятия
-                        доступны для учеников?</div>
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer5')">Сколько длится курс?</div>
                     <div class="faq faq-answer" id="faq-answer5">
-                        Дополнительные материалы, доступные для учеников, включают в себя:
-
-                        Учебные ресурсы: Электронные учебники, видеоуроки, презентации и онлайн-курсы, которые помогут
-                        углубить знания по конкретным темам и освоить новые концепции.
-
-                        Практические задания: Дополнительные задания и проекты, которые позволяют применить полученные
-                        знания на практике и развить навыки программирования.
-
-                        Онлайн-платформы: Доступ к специализированным онлайн-платформам и ресурсам, где ученики могут
-                        участвовать в соревнованиях, решать задачи и общаться с другими участниками.
-
-                        Справочные материалы: Различные справочники, руководства и статьи по программированию и
-                        связанным с ним темам, которые помогут ученикам быстро находить нужную информацию и решать
-                        возникающие вопросы.
-
-                        Индивидуальные консультации: Возможность получить индивидуальные консультации и помощь от
-                        опытных преподавателей по вопросам, связанным с учебным процессом.
-
-                        Все эти материалы предоставляются с целью обеспечить ученикам максимально полное и эффективное
-                        обучение в рамках нашей школы программирования.
+                        Продолжительность курса зависит от программы и может составлять от 6 месяцев до 2 лет. Мы
+                        предлагаем гибкие программы, которые подстраиваются под темп обучения каждого ребёнка. Так же
+                        это зависит от количества занятий в неделю.
                     </div>
 
-                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer6')">Сколько времени длится занятие?
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer6')">
+                        Сколько времени длится занятие?
                     </div>
 
                     <div class="faq faq-answer" id="faq-answer6">
-                        В нашей школе каждое занятие продолжается 55 минут.
+                        В нашей школе каждое занятие длится 55 минут и начинается в начале часа.
+                    </div>
+
+                    <div class="faq faq-item" onclick="toggleAnswer('faq-answer7')">
+                        Сколько раз можно заниматься в неделю?
+                    </div>
+
+                    <div class="faq faq-answer" id="faq-answer7">
+                        Вы можете выбирать удобное количество занятий: 1, 2, 3 раза в неделю или больше. Мы подстроим
+                        расписание под ваши предпочтения, чтобы обеспечить оптимальный темп обучения.
                     </div>
                 </div>
             </div>
