--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <h2 id="course-modal-title">Название курса</h2>
                                 <h3 id="course-modal-subtitle">Подзаголовок курса</h3>
                             </div>
-                            <img id="course-modal-icon" src="res/icon/icon.png" alt="Иконка курса">
+                            <img id="course-modal-icon" src="" alt="Иконка курса">
                             <p id="course-modal-description">Описание курса.</p>
                         </div>
 
@@ -355,14 +355,16 @@
                     <input type="text" name="fields[PHONE][0][VALUE_TYPE]" value="WORK" hidden>
                     <input type="email" id="email" name="fields[EMAIL][0][VALUE]" placeholder="Ваша почта" required>
                     <input type="text" name="fields[EMAIL][0][VALUE_TYPE]" value="WORK" hidden>
-                    
+
                     <label class="privacy-policy">
                         <input type="checkbox" id="privacy-policy-checkbox" class="styled-checkbox" required>
-                        <p>Нажимая кнопку «Отправить», я даю свое согласие на обработку моих персональных данных, 
-                            в соответствии с Федеральным законом №152-ФЗ «О персональных данных», на условиях и для целей, 
-                            определенных в <a href="#" id="show-privacy-policy">Согласии на обработку персональных данных</a>.</p>
+                        <p>Нажимая кнопку «Отправить», я даю свое согласие на обработку моих персональных данных,
+                            в соответствии с Федеральным законом №152-ФЗ «О персональных данных», на условиях и для
+                            целей,
+                            определенных в <a href="#" id="show-privacy-policy">Согласии на обработку персональных
+                                данных</a>.</p>
                     </label>
-    
+
                     <button class="submit-app-form__btn" id="submit-btn" type="">Отправить</button>
                 </form>
             </div>
@@ -375,17 +377,20 @@
             </div>
         </div>
 
-        <div id="privacy-policy-modal" style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 80%; max-width: 600px; background-color: white; padding: 20px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); z-index: 1000;">
+        <div id="privacy-policy-modal"
+            style="display:none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 80%; max-width: 600px; background-color: white; padding: 20px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); z-index: 1000;">
             <div>
                 <h2>Согласие на обработку персональных данных</h2>
                 <p>
-                    Настоящим в соответствии с Федеральным законом № 152-ФЗ «О персональных данных» от 27.07.2006 года 
+                    Настоящим в соответствии с Федеральным законом № 152-ФЗ «О персональных данных» от 27.07.2006 года
                     выражаю свое безусловное согласие на обработку моих персональных данных <strong>Оператором</strong>.
                 </p>
                 <!-- Текст соглашения -->
                 <p>Согласие дается на обработку следующих данных: Имя, Фамилия, Телефон, E-mail и Комментарий.</p>
-                <p>Оператор может совершать следующие действия: сбор, запись, хранение, уточнение, использование, и т.д.</p>
-                <p>Настоящее согласие действует до момента его отзыва путем отправки запроса на электронный адрес <strong>kodama.edu@gmail.com</strong>.</p>
+                <p>Оператор может совершать следующие действия: сбор, запись, хранение, уточнение, использование, и т.д.
+                </p>
+                <p>Настоящее согласие действует до момента его отзыва путем отправки запроса на электронный адрес
+                    <strong>kodama.edu@gmail.com</strong>.</p>
                 <div style="text-align: right;">
                     <button id="accept-privacy-policy" style="margin-right: 10px;">Принимаю</button>
                     <button id="decline-privacy-policy">Не принимаю</button>
