fix js script connection

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 style="color: #A4FFDE; text-decoration: underline;">kodama.edu@gmail.com</a></p>
     </footer>
 
-    <script type="module" src="script.js" defer></script>
+    <script src="script.js" defer></script>
     <script type="module">
         (function (w, d, u) {
             var s = d.createElement('script'); s.async = true; s.src = u + '?' + (Date.now() / 60000 | 0);
